fix(style.css): force align all in checkbox

--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@ body {
 	overflow: hidden;
 }
 
-.article-content > ul > li > * {
+.article-content > * > li > * {
 	    vertical-align: middle;
 }
 
